--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,6 @@ title: Just the Docs Template
 description: A starter template for a Jeykll site using the Just the Docs theme!
 theme: just-the-docs
 color_scheme: dark
+gh_edit_repository: "https://github.com/dhyces/trimmed-wiki"
 
-url: https://just-the-docs.github.io
-
-aux_links:
-  Template Repository: https://github.com/just-the-docs/just-the-docs-template
+url: https://dhyces.github.io/trimmed-wiki/
