--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,8 @@ title: Trimmed Wiki
 description: A starter template for a Jeykll site using the Just the Docs theme!
 theme: just-the-docs
 color_scheme: trimmed
+favicon_ico: "/assets/images/favicon.ico"
+
 gh_edit_repository: "https://github.com/dhyces/trimmed-wiki"
 
 url: https://dhyces.github.io/trimmed-wiki/
